On India platform Swaroop Ramchandra in footer alignment issue in Tab and show and manage page description, perks and reason to fund changed
On India platform   Swaroop Ramchandra in footer alignment issue in Tab
and show and manage page description, perks and reason to fund banner
background color changed.

--- a/web-app/css/campaign.css
+++ b/web-app/css/campaign.css
@@ -1262,8 +1262,8 @@ img.how-it-success-img{
     width: 100%;
 }
 .managecampaignDescription {
-    border: #e7e7e7;
-    background-color: #e7e7e7;
+    border:#f7f7f7;
+    background-color: #f7f7f7;
     height: 90px;
     margin-top: -3px
 }
